# probo-platform

./: Cargo.toml
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: balance-display.tsx  depth-chart.tsx  market-creation.tsx  market-selector.tsx  open-orders.tsx  order-form.tsx  price-display.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts  websocket.ts
probo-frontend/: package.json
probo-frontend/src/app/: layout.tsx  page.tsx
probo-frontend/src/app/create_market/: page.tsx
probo-frontend/src/app/event/[market_id]/: page.tsx
probo-frontend/src/app/events/: page.tsx
probo-frontend/src/components/: Navbar.tsx  UserSetup.tsx
probo-frontend/src/contexts/: UserContext.tsx
src/: main.rs
src/api/: server.rs
src/db/: processor.rs
src/engine/: balance_manager.rs  matching_engine.rs  mod.rs  order_book.rs  processor.rs
src/redis/: manager.rs
src/types/: api.rs  db.rs  market.rs  mod.rs  order.rs  ws.rs
src/ws/: server.rs
