[package]
name = "probo-platform"
version = "0.1.0"
edition = "2024"

[dependencies]

actix = "0.13"
actix-web = "4.9"
actix-web-actors = "4.3"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.31"
futures = "0.3"
redis = { version = "0.27", features = ["tokio-comp"] }
mobc-redis = "0.8.2"
mobc = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "6.1"                                         # For sharded balance management
